# take_a_photo

./: CMakeLists.txt  package.xml
launch/: image_publisher.launch  image_subscriber.launch
src/: image_publisher.cpp  image_subscriber.cpp
